* [BUGFIX]  Fix detection of MAC address for PXE registration
* [BUGFIX]  Fix several occurences of the same machine on relayservers in
            cluster mode
* [BUGFIX]  Clean deployment caches and used resources after a deployment
* [BUGFIX]  Logs and bundles no longer available from machine deployment view
* [BUGFIX]  Removing files from package does not generate an error


Pulse 2 4.4
===========
* [FEATURE] Improve registry settings description in config files
* [FEATURE] Improve execution of commands by using synchronous operations
* [FEATURE] First version of Pulse Kiosk
* [FEATURE] Addition of an inventory step after deployment
* [FEATURE] Ability to run a custom quick action on a group
* [FEATURE] Creation of sysprep response files for UEFI systems
* [BUGFIX] Fix detection of MSI command for 64bit Windows
* [BUGFIX] Fix Ajax call for run backup command
* [BUGFIX] Fix researching of machine and user OUs
* [BUGFIX] Review dependencies in Pulse packaging
* [BUGFIX] Fix calling a plugin from a quick action
* [BUGFIX] Fix encoding for deployment stuck in START DEPLOY step
* [BUGFIX] Fix downloadfile plugin for launch as a quickaction on groups
* [BUGFIX] Fix the saving of registry keys after the inventory
* [BUGFIX] Fix the display of machines when registry keys inventories are present

Pulse 2 4.3
=============
* [FEATURE] Enable browsing and download of files from client machines
* [FEATURE] Add new logs for dump in support script
* [FEATURE] Allow registration of UEFI machines via PXE
* [FEATURE] Show macOS in operating systems distribution on dashboard
* [BUGFIX] Fix top action menu in action views
* [BUGFIX] Use system user for new machines where no user has logged in yet
* [BUGFIX] Fix the problem of editing package when we switch from standard to expert mode
* [BUGFIX] Fix restoring of files to macOS clients

Pulse 2 4.2
=============
* [FEATURE] Quick action to install ARS SSH key to Machines
* [FEATURE] Allow deployment of python scripts